@@ -24,16 +24,20 @@ Cardservproxy changelog:
   The source ip's of any received incompatible updates are listed in the property 'version-mismatch'.
 - Changed: Enabling debug for a user now also enables web transaction logs for that user (same as profile debug).
   NOTE: Kicking the users sessions may be required before this takes effect (both after enabling and disabling).
+- Added: Experimental resend/broadcast mechanism for ClusteredCache, to make cache-only nodes slightly more feasible.
+  This allows a node to ask peers for a cw that doesn't exist locally and is taking more than max-cache-wait / 2.
+- Added: Option to automatically add any peers that are sending updates to ClusteredCache.
 - Added: Cws event for found service now shown in the status-web (despite the command being called error-log).
 - Added: Experimental sid cache linking feature, allows cache hits based on meta-data like sid rather than ecm payload.
   Links added via the web commands are stored in etc/links.cfg (this file is monitored for changes and autoloaded also).
 - Added: More sanity checks to DcwFilterPlugin (checksums, length and an option to monitor all replies for duplicates).
 - Added: DreamboxPlugin (csp-agent) support for more/older dm500 images. Basic (unsecured) file upload support.
 - Added: proxy-reference.html updated with highlighting for important elements and additional examples.
-- Added: New AdvXmlUserManager similar to XmlUserManager but with "advanced" features (ecm-rate, start and expire-date)
-  based on the suggestions made in TestUserManager.
+- Added: New AdvXmlUserManager to show how to add um-specific functionality without changing the core or existing um's
 
 - Changes to proxy.xml:
+  Added: Element <auto-add-peers> to ClusteredCache <cache-config> (true/false, default: false). Add peers automatically
+  if they send you traffic (adding them as targets for outgoing packets).
   Added: Attribute 'enable-service-linking' to <cache-handler> (true/false, default: false). Enables sid cache linker.
   Added: Attribute 'allow-different-ip' to <user-manager>, allows newcamd connections from different ip sources
   for the same user.
